# learnings

./: C++17.cpp  C++20.cpp  C++23.cpp  C++26.cpp  CMakeLists.txt  GMockExample.cpp
